--- a/public/index.html
+++ b/public/index.html
@@ -222,32 +222,10 @@
   </div>
 
 
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-analytics.js"></script>
-
   <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-database.js"></script>
-
-  <script>
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    var firebaseConfig = {
-      apiKey: "AIzaSyB-RFgRAyYiRqRXcCS7iV_GxAWsGUToWhs",
-      authDomain: "turnosappod.firebaseapp.com",
-      projectId: "turnosappod",
-      storageBucket: "turnosappod.appspot.com",
-      messagingSenderId: "289912126755",
-      appId: "1:289912126755:web:4cd1395acccba6bf4ce096",
-      measurementId: "G-3E0L5S7Y2T"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
-  </script>
-
+  <script src="js/firebase.js"></script>
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/app.js"></script>
 
