Agregando favicon, comentarios e indentando correctamente el código

--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
   <link rel="stylesheet" href="css/custom.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-
-  <title>Turnos</title>
+  <link rel="shortcut icon" href="img/favicon.png">
+  <title>TurnosApp</title>
 </head>
 
 <body class="leading-normal tracking-normal bg-gray-100 font-nunito">
 
   <div class="flex flex-wrap md:flex-row-reverse">
 
-    <!--Main Content-->
+    <!--CONTENIDO PRINCIPAL-->
     <main class="w-full bg-gray-100 md:w-4/5">
 
       <div class="px-6 pt-16 bg-gray-100 contenedor">
@@ -26,10 +26,10 @@
         <div id="crearTurnos" class="mx-auto">
           <div class="mt-5 md:mt-0 sm:border-b-0">
 
-            <h2 id="h2" class="my-5 text-2xl font-bold text-center">Cargue un nuevo Turno</h2>
+            <h2 id="h2" class="my-5 text-2xl font-bold text-center">Administra los turnos para tu clinica dental</h2>
+            <h3 class="text-xl text-center">Empreza agregando un nuevo turno</h3>
 
             <form id="formulario" action="#" method="POST">
-
 
               <div id="datos-turno" class="grid grid-cols-6 gap-6 px-4 py-5 sm:p-6">
 
@@ -178,7 +178,7 @@
 
     </main>
 
-    <!--Sidebar-->
+    <!--BARRA DE NAVEGACIÓN-->
     <div
       class="fixed bottom-0 w-full h-16 px-2 text-center bg-gray-900 md:w-1/5 md:bg-gray-900 md:pt-8 md:top-0 md:left-0 md:h-screen md:border-r-4 md:border-gray-600">
       <div class="mx-auto md:relative lg:float-right lg:px-6">
